--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -1,80 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawerLayout_admin1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.customer.MainActivity"
-    android:background="#F9F9F9">
+    android:background="#F9F9F9"
+    tools:context=".view.customer.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/fragmentAdmin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView_Admin"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:elevation="1dp"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView_Admin"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#2C3333"/>
+
+            <GridLayout
+                android:id="@+id/gridLayout_admin"
+                android:background="#2C3333"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:columnCount="2"
+                android:orientation="horizontal"
+                android:paddingTop="40dp"
+                android:paddingBottom="15dp">
+
+                <TextView
+                    android:id="@+id/tv_menu_inProgress"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:gravity="center"
+                    android:letterSpacing="0.05"
+                    android:linksClickable="false"
+                    android:text="In Progress"
+                    android:textColorLink="@color/black"
+                    android:textSize="23sp"
+                    android:textStyle="normal" />
+
+                <TextView
+                    android:id="@+id/tv_menu_complete"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:gravity="center"
+                    android:letterSpacing="0.05"
+                    android:linksClickable="true"
+                    android:text="Complete"
+                    android:textColorLink="@color/teal_700"
+                    android:textSize="23sp"
+                    android:textStyle="normal" />
+            </GridLayout>
+        <FrameLayout
+            android:id="@+id/fragment_admin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
+        <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/myViewpager"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/background_white"
-        app:itemIconSize="30dp"
-        app:itemIconTint="#8D8D8D"
-        app:itemTextColor="@color/black"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_admin"
-        app:elevation="1dp"
+        android:layout_height="match_parent"
         />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdmin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        app:backgroundTint="#FF9D5B"
-        android:contentDescription="Submit"
-        android:elevation="100dp"
-        android:src="@drawable/baseline_add_24"
-        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView_Admin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdminCate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:contentDescription="Submit"
-        android:layout_marginStart="50dp"
-        android:elevation="100dp"
-        android:src="@drawable/baseline_category_24"
-        app:backgroundTint="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/fabAdmin"
-        app:layout_constraintHorizontal_bias="0.28"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:visibility="invisible"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdminAdd1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:contentDescription="Submit"
-        android:elevation="100dp"
-        android:src="@drawable/baseline_local_drink_24"
-        android:visibility="invisible"
-        app:backgroundTint="@color/white"
-        android:layout_marginStart="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView_Admin"
-        app:layout_constraintBottom_toTopOf="@+id/fabAdmin"
-        app:layout_constraintStart_toEndOf="@+id/fabAdminCate" />
+    </LinearLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/drawerLayout_admin_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header_navigation"
+        app:menu="@menu/menu_navigation_admin"/>
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
