--- a/app/src/main/res/layout/food_manage.xml
+++ b/app/src/main/res/layout/food_manage.xml
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <GridLayout
             android:background="#2C3333"
             android:layout_width="match_parent"
@@ -23,9 +22,10 @@
             android:paddingTop="20dp"
             android:paddingBottom="40dp">
             <TextView
+                android:id="@+id/tile_food_manage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Menu Manage"
+                android:text="Food Manage"
                 android:gravity="center"
                 android:textSize="40dp"
                 android:fontFamily="@font/sorabold"
@@ -38,18 +38,18 @@
             android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_menu_admin"
+                android:id="@+id/rcv_food_admin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#DEDEDE" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_menu_admin"
+                android:id="@+id/fab_food_admin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="16dp"
-                app:layout_anchor="@id/rcv_menu_admin"
+                app:layout_anchor="@id/rcv_food_admin"
                 app:layout_anchorGravity="bottom|end"
                 android:src="@drawable/baseline_add_24"/>
 
