--- a/app/src/main/res/layout/dialog_add_food.xml
+++ b/app/src/main/res/layout/dialog_add_food.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_white"
     android:orientation="vertical"
-    android:paddingTop="30dp"
-    android:paddingBottom="30dp"
-    >
+    android:paddingBottom="30dp">
     <TextView
         android:id="@+id/tv_add_category"
         android:layout_width="match_parent"
@@ -21,7 +20,6 @@
         />
     <EditText
         android:textColor="#2F2D2C"
-
         android:id="@+id/ed_name_add_food"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,6 +51,47 @@
         android:paddingVertical="15dp"
         android:layout_marginTop="40dp"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="30dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#2F2D2C"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:text="Choose Image"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/add_image_food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:background="@drawable/background_white_boder"
+            android:text="Click Here"
+            android:textColor="@color/black"
+            android:padding="10dp"
+            />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView_add_food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp"
+            android:layout_marginStart="50dp"
+            android:visibility="gone"
+            >
+            <ImageView
+                android:id="@+id/imageView_add_food"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/lemon_tea"
+                android:scaleType="fitXY"
+                />
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
     <EditText
         android:id="@+id/ed_category_add_food"
         android:layout_width="match_parent"
@@ -68,21 +107,7 @@
         android:paddingVertical="15dp"
         android:layout_marginTop="40dp"
         />
-    <EditText
-        android:textColor="#2F2D2C"
-        android:id="@+id/ed_image_add_food"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_white_boder"
-        android:layout_marginHorizontal="30dp"
-        android:hint="Enter name category"
-        android:textColorHint="#2F2D2C"
-        android:textSize="24sp"
-        android:fontFamily="@font/sorasemibold"
-        android:gravity="center"
-        android:paddingVertical="15dp"
-        android:layout_marginTop="40dp"
-        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
